--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
     "react-simple-star-rating": "^5.1.7",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
