--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-pagination": "^2.4.1",
     "react-router-dom": "^6.21.2",
+    "react-simple-captcha": "^9.3.1",
     "react-simple-star-rating": "^5.1.7",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
