--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.4.0",
+    "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-pagination": "^2.4.1",
@@ -26,6 +28,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.5",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
